objects/Case.object
<CustomObject>
    <fields>
        <fullName>wkitsm__RiskLevel__c</fullName>
        <label>Risk Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkitsm__RiskMitigation__c</fullName>
        <label>Risk Mitigation</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>wkitsm__RiskScore__c</fullName>
        <label>Risk Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkitsm__RollbackPlan__c</fullName>
        <label>Rollback Plan</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>wkitsm__RootCause__c</fullName>
        <description>Problem Root Cause Analysis</description>
        <label>Root Cause</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>wkitsm__Scope__c</fullName>
        <label>Scope</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>wkitsm__ServiceProvider__c</fullName>
        <label>Service Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>wkitsm__ServiceProvider</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkitsm__Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__Subcategory__c</fullName>
        <label>Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>wkitsm__Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>wkitsm__Subcategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkitsm__SubmissionDetails__c</fullName>
        <label>Submission Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wkitsm__Symptoms__c</fullName>
        <label>Symptoms</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>wkitsm__TeamNotifiedTime__c</fullName>
        <label>TeamNotifiedTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wkitsm__TechnicalRisk__c</fullName>
        <label>Technical Risk</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>wkitsm__TestPlan__c</fullName>
        <label>Test Plan</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>wkitsm__Urgency__c</fullName>
        <label>Urgency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                    <default>true</default>
                    <label>Low</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkitsm__WorkaroundDetails__c</fullName>
        <label>Workaround Details</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_HR_Tickets</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.wkdw__HR_Benefits,Case.wkdw__HR_Employee_Relations,Case.wkdw__HR_General,Case.wkdw__HR_Leave,Case.wkdw__HR_Onboarding,Case.wkdw__HR_Payroll</value>
        </filters>
        <label>All HR Tickets</label>
    </listViews>
    <listViews>
        <fullName>All_Open_HR_Tickets</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.wkdw__HR_Benefits,Case.wkdw__HR_Employee_Relations,Case.wkdw__HR_General,Case.wkdw__HR_Leave,Case.wkdw__HR_Onboarding,Case.wkdw__HR_Payroll</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>All Open HR Tickets</label>
    </listViews>
    <listViews>
        <fullName>CAB_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>CAB Queue</label>
        <queue>ITSCCaseManagementCAB</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HR_Benefits_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>HR - Benefits</label>
        <queue>HR_Benefits</queue>
        <sharedTo>
            <group>HR_Benefits_Specialists</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HR_Employee_Relations_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>HR - Employee Relations</label>
        <queue>HR_Employee_Relations</queue>
        <sharedTo>
            <group>HR_Employee_Relations_Specialists</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HR_General_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>HR - General</label>
        <queue>HR_General</queue>
        <sharedTo>
            <group>HR_Generalists</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HR_Leave_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>HR - Leave</label>
        <queue>HR_Leave</queue>
        <sharedTo>
            <group>HR_Leave_Specialists</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HR_Onboarding_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>HR - Onboarding</label>
        <queue>HR_Onboarding</queue>
        <sharedTo>
            <group>HR_Onboarding_Specialists</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HR_Payroll_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>HR - Payroll</label>
        <queue>HR_Payroll</queue>
        <sharedTo>
            <group>HR_Payroll_Specialists</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ITSCCaseManagementCAB_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>ITSC - Case Management CAB</label>
        <queue>ITSCCaseManagementCAB</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ITSCCaseManagementDefault_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>ITSC - Case Management - Default</label>
        <queue>ITSCCaseManagementDefault</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ITSCCaseManagementEscalation_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>ITSC - Case Management - Escalation</label>
        <queue>ITSCCaseManagementEscalation</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Manager_Review</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Manager Review</value>
        </filters>
        <label>Manager Review</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <recordTypes>
        <fullName>HealthCloudGA__CareGap</fullName>
        <active>true</active>
        <businessProcess>HealthCloudGA__CareGap</businessProcess>
        <description>Defines a care gap for an individual</description>
        <label>CareGap</label>
    </recordTypes>
    <recordTypes>
        <fullName>HealthCloudGA__CarePlan</fullName>
        <active>true</active>
        <businessProcess>HealthCloudGA__Healthcare</businessProcess>
        <description>Defines a care plan for an individual and their care team</description>
        <label>CarePlan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Idea</fullName>
        <active>true</active>
        <businessProcess>wkdw__HR</businessProcess>
        <description>Idea Cases created from Experience Builder Idea Box</description>
        <label>Idea</label>
    </recordTypes>
    <recordTypes>
        <fullName>Workplace_Services</fullName>
        <active>true</active>
        <businessProcess>Workplace Process</businessProcess>
        <description>Request assistance with non-tech office equipment and kitchen supplies.</description>
        <label>Workplace Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkdw__HR_Benefits</fullName>
        <active>true</active>
        <businessProcess>wkdw__HR</businessProcess>
        <label>HR - Benefits</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkdw__HR_Employee_Relations</fullName>
        <active>true</active>
        <businessProcess>wkdw__HR</businessProcess>
        <label>HR - Employee Relations</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkdw__HR_General</fullName>
        <active>true</active>
        <businessProcess>wkdw__HR</businessProcess>
        <label>HR - General</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkdw__HR_Leave</fullName>
        <active>true</active>
        <businessProcess>wkdw__HR</businessProcess>
        <label>HR - Leave</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkdw__HR_Onboarding</fullName>
        <active>true</active>
        <businessProcess>wkdw__HR</businessProcess>
        <label>HR - Onboarding</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkdw__HR_Payroll</fullName>
        <active>true</active>
        <businessProcess>wkdw__HR</businessProcess>
        <label>HR - Payroll</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkdw__IT</fullName>
        <active>true</active>
        <businessProcess>wkdw__IT Process</businessProcess>
        <description>Tickets related to the operation of your company&apos;s technology environment. Use this record type to fix issues and resolve user requests related to technology, such as equipment problems, access requests, or application performance.</description>
        <label>IT</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkitsm__Change</fullName>
        <active>true</active>
        <businessProcess>wkitsm__ITSC - Change Process</businessProcess>
        <description>Create a request for a change on a recurring or trending problem or incident.</description>
        <label>Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkitsm__Incident</fullName>
        <active>true</active>
        <businessProcess>wkitsm__ITSC - Incident Process</businessProcess>
        <description>Log a ticket for a loss or disruption of operations, services, or functions.</description>
        <label>Incident</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkitsm__MajorIncident</fullName>
        <active>true</active>
        <businessProcess>wkitsm__ITSC - Major Incident Process</businessProcess>
        <description>Log a ticket for a major loss or disruption of operations, services, or functions.</description>
        <label>Major Incident</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkitsm__Problem</fullName>
        <active>true</active>
        <businessProcess>wkitsm__ITSC - Problem Process</businessProcess>
        <description>Correlate tickets around incidents that are related to a failure in the IT infrastructure.</description>
        <label>Problem</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkitsm__Request</fullName>
        <active>true</active>
        <businessProcess>wkitsm__ITSC - Request Process</businessProcess>
        <description>Log a service request for support, delivery, information, advice, or documentation. Requests are not related to failures in the IT infrastructure.</description>
        <label>Request</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>ITSCLeadTime</fullName>
        <active>true</active>
        <description>Validation rule for blocking create/update of cases that do not provide enough lead time.</description>
        <errorConditionFormula>AND(RecordType.DeveloperName = &apos;Change&apos;, OR(AND(ISNEW(), NOT(ISNULL(wkitsm__PlannedStartDateTime__c))), ISCHANGED(wkitsm__PlannedStartDateTime__c)), (DATETIMEVALUE(NOW())) &gt; DATETIMEVALUE(wkitsm__PlannedStartDateTime__c - 7))</errorConditionFormula>
        <errorMessage>All changes require a lead time of at least 7 days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>wkitsm__Case_Description_Required</fullName>
        <active>true</active>
        <description>Description is required for IT Service Cases.</description>
        <errorConditionFormula>IF(OR($RecordType.DeveloperName = &apos;Incident&apos;, $RecordType.DeveloperName = &apos;MajorIncident&apos;, $RecordType.DeveloperName = &apos;Request&apos;, 
      $RecordType.DeveloperName = &apos;Problem&apos;, $RecordType.DeveloperName = &apos;Change&apos;), ISBLANK(Description), false)</errorConditionFormula>
        <errorDisplayField>Description</errorDisplayField>
        <errorMessage>Description is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>wkitsm__Case_Subject_Required</fullName>
        <active>true</active>
        <description>Subject is required for IT Service Cases.</description>
        <errorConditionFormula>IF(OR($RecordType.DeveloperName = &apos;Incident&apos;, $RecordType.DeveloperName = &apos;MajorIncident&apos;, $RecordType.DeveloperName = &apos;Request&apos;, 
      $RecordType.DeveloperName = &apos;Problem&apos;, $RecordType.DeveloperName = &apos;Change&apos;), ISBLANK(Subject), false)</errorConditionFormula>
        <errorDisplayField>Subject</errorDisplayField>
        <errorMessage>Subject is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>wkitsm__Case_Update_Closed_Rejected</fullName>
        <active>true</active>
        <description>Validation rule to block users by updating the Closed ticket</description>
        <errorConditionFormula>ISPICKVAL(PRIORVALUE(Status), &apos;Closed&apos;)</errorConditionFormula>
        <errorMessage>You cannot edit a case that is in &apos;Closed&apos; state.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>wkitsm__ChangeStatusApproved</fullName>
        <active>true</active>
        <description>Change case status to Approval is only allowed after Submitted for Approval</description>
        <errorConditionFormula>AND(
 $RecordType.DeveloperName = &apos;Change&apos;,
 ISPICKVAL(Status, &apos;Approved&apos;),
 NOT(ISPICKVAL(PRIORVALUE(Status), &apos;Submitted for Approval&apos;))
)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>To move this Change case to &apos;Approved&apos; state, you must submit it for approval.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>wkitsm__ChangedLocked</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$RecordType.DeveloperName = &apos;Change&apos;,
NOT(ISPICKVAL(Status, &apos;Submitted for Approval&apos;)),
ISPICKVAL(PRIORVALUE(Status), &apos;Submitted for Approval&apos;)
)</errorConditionFormula>
        <errorMessage>You cannot edit a case when it is in &apos;Submitted for Approval&apos; state.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>wkitsm__ITSCStartDateNotAfterEndDate</fullName>
        <active>true</active>
        <description>Requires that the planned start date not be after the planned end date</description>
        <errorConditionFormula>AND($RecordType.DeveloperName = &apos;Change&apos;, wkitsm__PlannedStartDateTime__c &gt; wkitsm__PlannedEndDateTime__c)</errorConditionFormula>
        <errorMessage>Planned start time cannot be after planned end time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>wkitsm__Status_Closed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR($RecordType.DeveloperName = &apos;Incident&apos;, $RecordType.DeveloperName = &apos;Request&apos;),
ISPICKVAL(Status, &apos;Closed&apos;),
NOT(OR(CreatedBy.Id = $User.Id, ISPICKVAL(PRIORVALUE(Status), &apos;Resolved&apos;)))
)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>To close the case, first move the case to &apos;Resolved&apos; state.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>wkitsm__Status_ReOpen</fullName>
        <active>true</active>
        <errorConditionFormula>IF(OR($RecordType.DeveloperName = &apos;Incident&apos;, $RecordType.DeveloperName = &apos;Request&apos;),
IF(ISPICKVAL(PRIORVALUE(Status), &apos;Closed&apos;),
NOT(ISPICKVAL(Status, &apos;Closed&apos;)), false),
false)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>You cannot reopen a closed incident. Open a new incident.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>wkitsm__Status_Resolved</fullName>
        <active>true</active>
        <errorConditionFormula>IF(OR($RecordType.DeveloperName = &apos;Incident&apos;, $RecordType.DeveloperName = &apos;Request&apos;, $RecordType.DeveloperName = &apos;MajorIncident&apos;),
IF(ISPICKVAL(Status, &apos;Resolved&apos;),
OR(
   ISNULL(TEXT(wkitsm__ResolutionType__c)),
   ISBLANK(TEXT(wkitsm__ResolutionType__c))
), false),
false)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>Select the resolution type and details.</errorMessage>
    </validationRules>
</CustomObject>